<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="android_ems_setems">android:ems или setEms(n) устанавливает ширину TextView или EditText в соответствии с текстом букв n \'M\' независимо от фактического расширения текста и размера текста.</string>
    <string name="task_4">Task №4</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="example">Example:</string>
</resources>